# flux-fiction

./: .coverage  .gitignore  CMakeLists.txt  README.md  SKILL.md  load_jobtap.sh  meson.build  meson.options  pyproject.toml
podman_containers/: Containerfile  apptainer-dev.def  build_container.sh  flux-fiction-dev.def
podman_containers/scripts/: build-flux-core.sh  build-flux-fiction.sh  build-flux-sched.sh  build-flux-stack.sh  flux-dev-env.sh  flux-dev-profile.sh
src/: config.toml  meson.build  newvsoldtest.py  pyproject.toml
src/flux_fiction/: _paths.py
src/flux_fiction/_adapters/: base.py
src/flux_fiction/_adapters/flux/: adapter.py  journal.py  modules.py  resources.py  stats.py  watchers.py
src/flux_fiction/_adapters/mock/: adapter.py
src/flux_fiction/_core/: __init__.py  engine.py  events.py  faketime.py  models.py
src/flux_fiction/_exec/: simexec.py
src/flux_fiction/_outputs/: filesystem_output.py  vis.py
src/flux_fiction/api/: __init__.py  client.py  config.py  status.py
src/flux_fiction/cli/: jobtap_path.py  main.py  run_ff.py  run_ff_parallel.py
src/flux_fiction/cli/support/: __init__.py  diagnostics.py  run_api_experiment.py
src/flux_fiction/parallel/: __init__.py  config.py  runner.py
src/flux_fiction/telemetry/: __init__.py  bridge.py  client.py  telemetry.py
src/jobtap/: emu-jobtap.c  emu=jobtap.c  ff_otel.c  ff_otel.h  sandbox.c
src/python/: 100000_200000_result.txt  R.out  compare_events.py  flux-emulator.py  lassen_0_1000_first_result.txt  plot_node_preference.ipynb  test_emulator_runs.py  timing.ipynb  transition_diff.py
src/tests/: test_api_config.py  test_faketime_controller.py  test_faketime_rabbit_regression.py  test_flux_backend_integration.py  test_load_jobtap.py  test_mock_adapter_scenarios.py  test_parallel_config.py  test_parallel_runner.py  test_paths_and_cli.py  test_quiescent_accumulation.py  test_rabbit_storage_jobspec.py  test_resource_vis.py  test_run_api_experiment_cli.py  test_run_ff_helpers.py  test_run_ff_paths.py  test_scheduler_state_dump.py  test_simexec.py  test_status_reporting.py  test_support_diagnostics.py  test_telemetry_layers.py  test_trace_reader.py
test-inputs/: 10-backfill.csv  10-gaps.csv  10-gpu.csv  10-single-node.csv  convert_last.py  entries_slice.py  exclusive_ncpus.py  job_trace.csv  jobs_with_decremented_timelimit.csv  jobs_with_timelimit_decrement_2s.csv  lassen_100000_101000.csv  lassen_250_10250.csv  lassen_300k_325k.csv  lassen_900k_925k.csv  lassen_first_1000.csv  test.csv
trace_generator/: dataset_analysis.ipynb  generator.py  main.ipynb  train.py  weekly_rate_15m.npz
util/: run_all_experiments.sh  run_ff.py  run_snb_experiments.sh  start_flux.sh
vis/: backfill_gen.ipynb
