[build-system]
requires = [
  "meson>=1.3.0",
  "meson-python>=0.16.0",
]
build-backend = "mesonpy"

[project]
name = "flux-fiction"
version = "0.1.0"
description = "Trace-driven Flux scheduling emulator and analysis toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-3.0" }
authors = [
  { name = "Flux Fiction Developers" },
]
dependencies = [
  "pydantic>=1.10",
  "tqdm>=4.0",
]

[project.optional-dependencies]
dev = [
  "build",
  "meson>=1.3.0",
  "meson-python>=0.16.0",
  "pytest",
  "pytest-cov",
]
plot = [
  "matplotlib>=3.7",
]
otel = [
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-exporter-otlp-proto-http>=1.24.0",
]

[project.scripts]
flux-fiction = "flux_fiction.cli.main:main"
flux-fiction-run = "flux_fiction.cli.run_ff:main"
flux-fiction-jobtap-path = "flux_fiction.cli.jobtap_path:main"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-q"
